Improvments in V1.0.1